--- a/torchci/components/TooltipTarget.module.css
+++ b/torchci/components/TooltipTarget.module.css
@@ -7,6 +7,7 @@
   position: absolute;
   display: inline-flex;
   z-index: 100;
+  pointer-events: none;
 }
 
 .content {
@@ -15,6 +16,7 @@
   border-radius: 6px;
   cursor: default;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  pointer-events: auto;
 
   position: absolute;
   z-index: 1;
@@ -29,6 +31,7 @@
   border-radius: 6px;
   cursor: default;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  pointer-events: auto;
 
   position: absolute;
   z-index: 1;
